blts-ofono-tests (0.1.19) unstable; urgency=low

  * Added data context test case  
  
 -- Mikko Ojala <mikko.ojala@digia.com>  Mon, 28 Mar 2011 14:57:07 +0300

blts-ofono-tests (0.1.18) unstable; urgency=low

  * [ Kari Laakso ] Improved all voice call, dual call and multiparty case run
    time instructions
  * Version update due to packaging change.

 -- Jussi Saavalainen <jussi.saavalainen@digia.com>  Tue, 08 Feb 2011 15:21:24 +0200

blts-ofono-tests (0.1.17) unstable; urgency=low

  [ Mikko Ojala, Kari Laakso ]
  * Added radio technology change test
  * "--doncleanup" changed to "--cleanup" and removed mandatory environment check
  * Improved command line help
  * Improved all voice call, dual call and multiparty case run time instructions

 -- Kari Laakso <kari.laakso@digia.com>  Thu, 20 Jan 2011 10:18:53 +0200

blts-ofono-tests (0.1.16-1) unstable; urgency=low

  * Debian packaging build-dependency update.

 -- Jussi Saavalainen <jussi.saavalainen@digia.com>  Wed, 19 Jan 2011 16:31:40 +0200

blts-ofono-tests (0.1.16) unstable; urgency=low

  [ Mikko Ojala ]
  * Fixes to PIN lock and unlock cases
  * Timeouts increased to 60 seconds in several network-facing cases
  * "dontcleanup" flag now also affects supplementary service resets
  * PIN Reset default configuration now matches Phonesim interface

 -- Mikko Ojala <mikko.ojala@digia.com>  Mon, 17 Jan 2011 14:44:06 +0200

blts-ofono-tests (0.1.15) unstable; urgency=low

  * Tests.xml update

 -- Kimmo Myllyvirta <kimmo.myllyvirta@digia.com>  Thu, 16 Dec 2010 11:01:55 +0200

blts-ofono-tests (0.1.14) unstable; urgency=low

  [ Aki Nyman, Pasi Matilainen, Kari Laakso ]
  * Dual call cases (transfer, swap, release & answer, hold & answer) updated to work with oFono 0.33 API
  * Incoming call cases (hangup, hangup all, remote hangup, deflect and cancel) updated to work with oFono 0.33 API
  * Multiparty call case and private chat call case updated to work with oFono 0.33 API