@@ -74,6 +74,18 @@ on_connection_context_property_changed(__attribute__((unused))DBusGProxy *proxy,
 {
 	FUNC_ENTER();
 	struct context_case_state* state = (struct context_case_state*) user_data;
+	if (G_VALUE_HOLDS_BOXED(value))
+	{
+		BLTS_DEBUG("Context properties changed:\n");
+		GHashTable* properties = (GHashTable *) g_value_get_boxed(value);
+		if (properties)
+		{
+			g_hash_table_foreach(properties, (GHFunc) hash_entry_gvalue_print,
+			        NULL);
+		}
+		return;
+	}
+
 	BLTS_DEBUG("Data context property: '%s' changed to '%s'\n", key,
 			g_strdup_value_contents(value));
 
@@ -115,44 +127,24 @@ context_property_timeout(gpointer user_data)
 
 }
 
-int
-ofono_test_data_context(void* user_ptr, __attribute__((unused))int test_num)
+char *
+ofono_get_contextpath(char *modem_path, my_ofono_data *data)
 {
 	FUNC_ENTER()
-	BLTS_TRACE("on data context\n");
-	int retval = 0;
-	my_ofono_data* data = (my_ofono_data*) user_ptr;
-
-	struct context_case_state state;
-
-	state.result = 0;
-	state.ofono_data = data;
-
-	GHashTable* properties = NULL;
-	DBusGProxy *proxyconnman = NULL;
 	GPtrArray *contexts = NULL;
-	char *modem_path = NULL;
+	char * contextpath = NULL;
 	GError *error = NULL;
 	GValue val = G_VALUE_INIT;
 
-	char * contextpath = NULL;
-
-	if (my_ofono_get_modem(data))
-		return -1;
-
-	if (data->number_modems == 0)
-		return -1;
-
-	modem_path = data->modem[0];
-
-	BLTS_DEBUG("modem_path: %s\n", modem_path);
+	DBusGProxy *proxyconnman = NULL;
 	proxyconnman = dbus_g_proxy_new_for_name(data->connection, OFONO_BUS,
 	        modem_path, OFONO_CONNMAN_INTERFACE);
 
 	if (!proxyconnman)
 	{
 		BLTS_DEBUG("Failed to open proxy for " OFONO_CONNMAN_INTERFACE "\n");
-		return -1;
+		FUNC_LEAVE();
+		return NULL;
 	}
 
 	if (!org_ofono_ConnectionManager_get_contexts(proxyconnman, &contexts,
@@ -162,7 +154,8 @@ ofono_test_data_context(void* user_ptr, __attribute__((unused))int test_num)
 		g_error_free(error);
 		error = NULL;
 		g_object_unref(proxyconnman);
-		retval = -1;
+		FUNC_LEAVE();
+		return NULL;
 
 	}
 
@@ -176,21 +169,60 @@ ofono_test_data_context(void* user_ptr, __attribute__((unused))int test_num)
 		g_error_free(error);
 		error = NULL;
 		g_object_unref(proxyconnman);
-		retval = -1;
-
+		g_value_unset (&val);
+		FUNC_LEAVE();
+		return NULL;
 	}
-
+	g_value_unset (&val);
 	g_object_unref(proxyconnman);
 
 	// exit here if something has gone wrong
-	if ((retval == -1) || (contexts == NULL))
+	if (contexts == NULL)
 	{
-		BLTS_DEBUG("No available contexts or error ... exiting\n");
+		BLTS_DEBUG("No available contexts...\n");
 		g_ptr_array_free(contexts, TRUE);
-		return retval;
+		FUNC_LEAVE();
+		return NULL;
 	}
 	GValueArray *pathindex = g_ptr_array_index(contexts, 0);
 	contextpath = g_value_get_boxed(g_value_array_get_nth(pathindex, 0));
+	FUNC_LEAVE();
+	return contextpath;
+}
+
+int
+ofono_test_data_context(void* user_ptr, __attribute__((unused))int test_num)
+{
+	FUNC_ENTER()
+	int retval = 0;
+	my_ofono_data* data = (my_ofono_data*) user_ptr;
+	char * contextpath = NULL;
+	struct context_case_state state;
+
+	state.result = 0;
+	state.ofono_data = data;
+
+	GHashTable* properties = NULL;
+
+	char *modem_path = NULL;
+	GError *error = NULL;
+	GValue val = G_VALUE_INIT;
+
+
+	if (my_ofono_get_modem(data))
+		return -1;
+
+	if (data->number_modems == 0)
+		return -1;
+
+	modem_path = data->modem[0];
+
+	contextpath = ofono_get_contextpath(modem_path, data);
+	if(!contextpath)
+	{
+		BLTS_DEBUG("No contexts found\n");
+		return -1;
+	}
 
 	state.datacontext_proxy = dbus_g_proxy_new_for_name(data->connection,
 	        OFONO_BUS, contextpath, OFONO_CONTEXT_INTERFACE);
@@ -223,6 +255,9 @@ ofono_test_data_context(void* user_ptr, __attribute__((unused))int test_num)
 
 	BLTS_DEBUG("Activating gprs\n");
 
+
+	g_value_init(&val, G_TYPE_BOOLEAN);
+	g_value_set_boolean(&val, TRUE);
 	state.wished_state = "TRUE";
 
 	if (!org_ofono_ConnectionManager_set_property(state.datacontext_proxy,
@@ -259,7 +294,7 @@ ofono_test_data_context(void* user_ptr, __attribute__((unused))int test_num)
 		state.datacontext_proxy = NULL;
 		retval = -1;
 	}
-
+	g_value_unset (&val);
 	source_id = g_timeout_add(data->timeout,
 	        (GSourceFunc) context_property_timeout, &state);
 
@@ -276,3 +311,148 @@ ofono_test_data_context(void* user_ptr, __attribute__((unused))int test_num)
 	return retval;
 }
 
+int
+ofono_test_data_context_download(void* user_ptr, __attribute__((unused))int test_num)
+{
+	FUNC_ENTER()
+	int retval = 0;
+	my_ofono_data* data = (my_ofono_data*) user_ptr;
+	char * contextpath = NULL;
+	struct context_case_state state;
+
+	state.result = 0;
+	state.ofono_data = data;
+	char *modem_path = NULL;
+	GError *error = NULL;
+	GValue val = G_VALUE_INIT;
+	char *command;
+
+
+	if (my_ofono_get_modem(data))
+		return -1;
+
+	if (data->number_modems == 0)
+		return -1;
+
+	modem_path = data->modem[0];
+
+	contextpath = ofono_get_contextpath(modem_path, data);
+	BLTS_DEBUG("Contextpath = %s\n", contextpath);
+	if(!contextpath)
+	{
+		BLTS_DEBUG("No contexts found\n");
+		return -1;
+	}
+
+	BLTS_DEBUG("Timeout=%i\n", data->timeout);
+	state.datacontext_proxy = dbus_g_proxy_new_for_name(data->connection,
+	        OFONO_BUS, contextpath, OFONO_CONTEXT_INTERFACE);
+	if (!state.datacontext_proxy)
+	{
+		BLTS_DEBUG ("Failed to open proxy for " OFONO_CONTEXT_INTERFACE "\n");
+		FUNC_LEAVE();
+		return -1;
+	}
+
+	setup_connectioncontext_callbacks(&state);
+
+	BLTS_DEBUG("Activating gprs\n");
+
+	g_value_init(&val, G_TYPE_BOOLEAN);
+	g_value_set_boolean(&val, TRUE);
+	state.wished_state = "TRUE";
+
+	if (!org_ofono_ConnectionManager_set_property(state.datacontext_proxy,
+	        "Active", &val, &error))
+	{
+		display_dbus_glib_error(error);
+		g_error_free(error);
+		error = NULL;
+		remove_connectioncontext_callbacks(&state);
+		g_object_unref(state.datacontext_proxy);
+		state.datacontext_proxy = NULL;
+		return -1;
+	}
+
+
+	guint source_id = g_timeout_add(data->timeout,
+	        (GSourceFunc) context_property_timeout, &state);
+
+	g_main_loop_run(state.ofono_data->mainloop);
+
+	g_source_remove(source_id);
+
+	BLTS_DEBUG("Ping test to '%s'\n", data->ping_address);
+
+	command = (char*) malloc (strlen(data->ping_address) + 20);
+	  if (command==NULL)
+	  {
+		  BLTS_DEBUG("OOM");
+		  return -1;
+	  }
+	sprintf(command, "ping -c 1 -I gprs0 %s", data->ping_address);
+	retval = system(command);
+	free(command);
+	if(retval)
+	{
+		BLTS_DEBUG("Ping test failed\n");
+	}
+	else
+	{
+		BLTS_DEBUG("Ping test complete, data connection verified\n");
+	}
+
+	BLTS_DEBUG("Deactivating gprs\n");
+	g_value_reset(&val);
+	g_value_set_boolean(&val, FALSE);
+	state.wished_state = "FALSE";
+	if (!org_ofono_ConnectionManager_set_property(state.datacontext_proxy,
+	        "Active", &val, &error))
+	{
+		display_dbus_glib_error(error);
+		g_error_free(error);
+		error = NULL;
+		remove_connectioncontext_callbacks(&state);
+		g_object_unref(state.datacontext_proxy);
+		state.datacontext_proxy = NULL;
+		retval = -1;
+	}
+	g_value_unset (&val);
+	source_id = g_timeout_add(data->timeout,
+	        (GSourceFunc) context_property_timeout, &state);
+
+	g_main_loop_run(state.ofono_data->mainloop);
+
+	g_source_remove(source_id);
+
+	if (state.result)
+		retval = state.result;
+
+	remove_connectioncontext_callbacks(&state);
+	g_object_unref(state.datacontext_proxy);
+	FUNC_LEAVE();
+	return retval;
+}
+
+
+
+void *
+data_context_variant_set_arg_processor(struct boxed_value *args, void *user_ptr)
+{
+	long timeout = 0;
+	char *ping_address = NULL;
+
+	my_ofono_data *data = ((my_ofono_data *) user_ptr);
+	if (!data)
+		return 0;
+	ping_address = strdup(blts_config_boxed_value_get_string(args));
+	args = args->next;
+	timeout = atol(blts_config_boxed_value_get_string(args));
+
+	data->ping_address = ping_address;
+
+	if (!data->timeout)
+		data->timeout = timeout;
+
+	return data;
+}
