@@ -78,6 +78,7 @@ enum BLTSoFonoCases {
 	BLTS_OFONO_MULTIPARTY_CALL_PRIVATE,
 	BLTS_OFONO_RAT,
 	BLTS_OFONO_DATA_CONTEXT,
+	BLTS_OFONO_DATA_CONTEXT_PING,
 };
 
 #define G_VALUE_INIT {0,{{0}}}
